# skyjump

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
cmake/: CMakeHelpers.cmake
data/: readme.md  setup.ini
data/lab/: Simulation.osim  Simulation_Report.docx  Simulation_Setup_Forward.xml  Simulation_controls.xml  jumpPerformance.m
data/results/10points/: Jumper_bestSoFar.osim  Jumper_best_BodyKinematics_acc_global.sto  Jumper_best_BodyKinematics_vel_global.sto  Jumper_noActivation.osim  Jumper_noActivation_states.sto  Jumper_no_BodyKinematics_pos_global.sto  Jumper_no_ForceReporter_forces.sto  Jumper_randomSample.osim  jumper10dof24musc.osim_controls.sto  jumper10dof24musc.osim_states.sto  jumper10dof24musc.osim_states_degrees.mot
matlab/: read_motionFile.m
skyjump-ece7048/data/: AppState.xml  setup.ini
skyjump-ece7048/data/lab/: Simulation_initial_states.sto
skyjump-ece7048/data/model/: Jumper_controls.sto  jumper10dof24musc.osim  jumper10dof24musc_withArms.osim  jumper10dof24musc_withArms.osim_controls.sto  jumper10dof24musc_withArms.osim_states.sto  jumper10dof24musc_withArms.osim_states_degrees.mot  readme.md  skypeople_with27muscles_Arms.osim
skyjump-ece7048/data/results/: Jumper_bestSoFar.osim  Jumper_bestSoFar_controls.sto  Jumper_controls.sto  Jumper_noActivation.osim  Jumper_noActivation_controls.sto  Jumper_no_BodyKinematics_acc_global.sto  Jumper_no_BodyKinematics_pos_global.sto  Jumper_no_BodyKinematics_vel_global.sto  Jumper_randomSample.osim  Jumper_states.sto  Jumper_states_degrees.mot  bestSoFarLog.txt  optLog.txt
skyjump-ece7048/data/results/10points/: Jumper_bestSoFar_controls.sto  Jumper_bestSoFar_states.sto  Jumper_best_BodyKinematics_pos_global.sto  Jumper_best_ForceReporter_forces.sto  Jumper_noActivation_controls.sto  Jumper_no_BodyKinematics_acc_global.sto  Jumper_no_BodyKinematics_vel_global.sto  bestSoFarLog.txt  optLog.txt  verboseLog.txt
skyjump-ece7048/data/results2/: Jumper_bestSoFar.osim  Jumper_bestSoFar_controls.sto  Jumper_best_BodyKinematics_acc_global.sto  Jumper_best_BodyKinematics_pos_global.sto  Jumper_best_BodyKinematics_vel_global.sto  Jumper_best_ForceReporter_forces.sto  Jumper_noActivation.osim  Jumper_noActivation_controls.sto  Jumper_randomSample.osim  optLog.txt  verboseLog.txt
skyjump-ece7048/data/results3/: Jumper_bestSoFar.osim  Jumper_bestSoFar_controls.sto  Jumper_best_BodyKinematics_acc_global.sto  Jumper_best_BodyKinematics_pos_global.sto  Jumper_best_BodyKinematics_vel_global.sto  Jumper_noActivation.osim  Jumper_noActivation_controls.sto  Jumper_no_BodyKinematics_acc_global.sto  Jumper_no_BodyKinematics_pos_global.sto  Jumper_no_BodyKinematics_vel_global.sto  Jumper_randomSample.osim  bestSoFarLog.txt  optLog.txt  verboseLog.txt
skyjump-ece7048/data/results4/: Jumper_bestSoFar.osim  Jumper_bestSoFar_controls.sto  Jumper_best_BodyKinematics_acc_global.sto  Jumper_best_BodyKinematics_pos_global.sto  Jumper_best_BodyKinematics_vel_global.sto  Jumper_best_ForceReporter_forces.sto  Jumper_noActivation.osim  Jumper_noActivation_controls.sto  Jumper_noActivation_states.sto  Jumper_no_BodyKinematics_acc_global.sto  Jumper_no_BodyKinematics_pos_global.sto  Jumper_no_BodyKinematics_vel_global.sto  Jumper_no_ForceReporter_forces.sto  Jumper_randomSample.osim  bestSoFarLog.txt  optLog.txt  verboseLog.txt
skyjump-ece7048/src/: CMakeLists.txt  Settings.h  main.cpp
skyjump-ece7048/src/other/: JumpingOptimizationDouble.cpp  JumpingOptimizationWithArms.cpp
src/: CMakeLists.txt  INIReader.cpp  INIReader.h  Ini.h  main.cpp
src/customoptimization/: CMakeLists.txt  CustomOptimizationDLL.h  ParticleSwarmOptimization.cpp  ParticleSwarmOptimization.h
src/customoptimization/pso/: pso.cpp  pso.h  testPSO.cpp
